[146] Fix name getting cutoff for zero state screen
Original change's description:
> Fix name getting cutoff for zero state screen
> 
> Add padding to allow space for name text in header.
> 
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7614628
> Commit-Queue: Duncan Mercer <mercerd@google.com>
> Cr-Commit-Position: refs/heads/main@{#1591219}

Bug: 488458980
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7621878
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/branch-heads/7680@{#1712}
Cr-Branched-From: 76b7d80e5cda23fe6537eed26d68c92e995c7f39-refs/heads/main@{#1582197}

--- a/chrome/browser/resources/contextual_tasks/app.css
+++ b/chrome/browser/resources/contextual_tasks/app.css
@@ -628,6 +628,7 @@ error-page {
   background-size: auto 700%;
   position: relative;
   animation: textShimmerAnimation 1s cubic-bezier(0.3, 0, 1, 1) both;
+  padding-inline-end: 2px;
 }
 
 .name-shimmer-dark {
